compiler/generated/ProjectQParser.cpp

// Generated from ProjectQ.g4 by ANTLR 4.7.1


#include "ProjectQListener.h"

#include "ProjectQParser.h"


using namespace antlrcpp;
using namespace projectq;
using namespace antlr4;

ProjectQParser::ProjectQParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ProjectQParser::~ProjectQParser() {
  delete _interpreter;
}

std::string ProjectQParser::getGrammarFileName() const {
  return "ProjectQ.g4";
}

const std::vector<std::string>& ProjectQParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ProjectQParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- XaccsrcContext ------------------------------------------------------------------

ProjectQParser::XaccsrcContext::XaccsrcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProjectQParser::XacckernelContext *> ProjectQParser::XaccsrcContext::xacckernel() {
  return getRuleContexts<ProjectQParser::XacckernelContext>();
}

ProjectQParser::XacckernelContext* ProjectQParser::XaccsrcContext::xacckernel(size_t i) {
  return getRuleContext<ProjectQParser::XacckernelContext>(i);
}

std::vector<tree::TerminalNode *> ProjectQParser::XaccsrcContext::NEWLINE() {
  return getTokens(ProjectQParser::NEWLINE);
}

tree::TerminalNode* ProjectQParser::XaccsrcContext::NEWLINE(size_t i) {
  return getToken(ProjectQParser::NEWLINE, i);
}


size_t ProjectQParser::XaccsrcContext::getRuleIndex() const {
  return ProjectQParser::RuleXaccsrc;
}

void ProjectQParser::XaccsrcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXaccsrc(this);
}

void ProjectQParser::XaccsrcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXaccsrc(this);
}

ProjectQParser::XaccsrcContext* ProjectQParser::xaccsrc() {
  XaccsrcContext *_localctx = _tracker.createInstance<XaccsrcContext>(_ctx, getState());
  enterRule(_localctx, 0, ProjectQParser::RuleXaccsrc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ProjectQParser::T__0

    || _la == ProjectQParser::NEWLINE) {
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ProjectQParser::NEWLINE) {
        setState(34);
        match(ProjectQParser::NEWLINE);
        setState(39);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(40);
      xacckernel();
      setState(44);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(41);
          match(ProjectQParser::NEWLINE); 
        }
        setState(46);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      }
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- XacckernelContext ------------------------------------------------------------------

ProjectQParser::XacckernelContext::XacckernelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProjectQParser::ProjectqprogContext* ProjectQParser::XacckernelContext::projectqprog() {
  return getRuleContext<ProjectQParser::ProjectqprogContext>(0);
}

std::vector<tree::TerminalNode *> ProjectQParser::XacckernelContext::IDENTIFIER() {
  return getTokens(ProjectQParser::IDENTIFIER);
}

tree::TerminalNode* ProjectQParser::XacckernelContext::IDENTIFIER(size_t i) {
  return getToken(ProjectQParser::IDENTIFIER, i);
}

std::vector<ProjectQParser::TypedparamContext *> ProjectQParser::XacckernelContext::typedparam() {
  return getRuleContexts<ProjectQParser::TypedparamContext>();
}

ProjectQParser::TypedparamContext* ProjectQParser::XacckernelContext::typedparam(size_t i) {
  return getRuleContext<ProjectQParser::TypedparamContext>(i);
}


size_t ProjectQParser::XacckernelContext::getRuleIndex() const {
  return ProjectQParser::RuleXacckernel;
}

void ProjectQParser::XacckernelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXacckernel(this);
}

void ProjectQParser::XacckernelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXacckernel(this);
}

ProjectQParser::XacckernelContext* ProjectQParser::xacckernel() {
  XacckernelContext *_localctx = _tracker.createInstance<XacckernelContext>(_ctx, getState());
  enterRule(_localctx, 2, ProjectQParser::RuleXacckernel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(ProjectQParser::T__0);
    setState(53);
    dynamic_cast<XacckernelContext *>(_localctx)->kernelname = match(ProjectQParser::IDENTIFIER);
    setState(54);
    match(ProjectQParser::T__1);
    setState(55);
    match(ProjectQParser::T__2);
    setState(56);
    dynamic_cast<XacckernelContext *>(_localctx)->acceleratorbuffer = match(ProjectQParser::IDENTIFIER);
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ProjectQParser::T__3) {
      setState(57);
      match(ProjectQParser::T__3);
      setState(58);
      typedparam();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(ProjectQParser::T__4);
    setState(65);
    match(ProjectQParser::T__5);
    setState(66);
    projectqprog();
    setState(67);
    match(ProjectQParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KernelcallContext ------------------------------------------------------------------

ProjectQParser::KernelcallContext::KernelcallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ProjectQParser::KernelcallContext::IDENTIFIER() {
  return getTokens(ProjectQParser::IDENTIFIER);
}

tree::TerminalNode* ProjectQParser::KernelcallContext::IDENTIFIER(size_t i) {
  return getToken(ProjectQParser::IDENTIFIER, i);
}


size_t ProjectQParser::KernelcallContext::getRuleIndex() const {
  return ProjectQParser::RuleKernelcall;
}

void ProjectQParser::KernelcallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKernelcall(this);
}

void ProjectQParser::KernelcallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKernelcall(this);
}

ProjectQParser::KernelcallContext* ProjectQParser::kernelcall() {
  KernelcallContext *_localctx = _tracker.createInstance<KernelcallContext>(_ctx, getState());
  enterRule(_localctx, 4, ProjectQParser::RuleKernelcall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    dynamic_cast<KernelcallContext *>(_localctx)->kernelname = match(ProjectQParser::IDENTIFIER);
    setState(70);
    match(ProjectQParser::T__1);
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ProjectQParser::IDENTIFIER) {
      setState(71);
      match(ProjectQParser::IDENTIFIER);
    }
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ProjectQParser::T__3) {
      setState(74);
      match(ProjectQParser::T__3);
      setState(75);
      match(ProjectQParser::IDENTIFIER);
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(ProjectQParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypedparamContext ------------------------------------------------------------------

ProjectQParser::TypedparamContext::TypedparamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProjectQParser::TypedparamContext::TYPE() {
  return getToken(ProjectQParser::TYPE, 0);
}

tree::TerminalNode* ProjectQParser::TypedparamContext::IDENTIFIER() {
  return getToken(ProjectQParser::IDENTIFIER, 0);
}


size_t ProjectQParser::TypedparamContext::getRuleIndex() const {
  return ProjectQParser::RuleTypedparam;
}

void ProjectQParser::TypedparamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypedparam(this);
}

void ProjectQParser::TypedparamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypedparam(this);
}

ProjectQParser::TypedparamContext* ProjectQParser::typedparam() {
  TypedparamContext *_localctx = _tracker.createInstance<TypedparamContext>(_ctx, getState());
  enterRule(_localctx, 6, ProjectQParser::RuleTypedparam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(ProjectQParser::TYPE);
    setState(84);
    match(ProjectQParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProjectqprogContext ------------------------------------------------------------------

ProjectQParser::ProjectqprogContext::ProjectqprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProjectQParser::InstrContext *> ProjectQParser::ProjectqprogContext::instr() {
  return getRuleContexts<ProjectQParser::InstrContext>();
}

ProjectQParser::InstrContext* ProjectQParser::ProjectqprogContext::instr(size_t i) {
  return getRuleContext<ProjectQParser::InstrContext>(i);
}

std::vector<tree::TerminalNode *> ProjectQParser::ProjectqprogContext::NEWLINE() {
  return getTokens(ProjectQParser::NEWLINE);
}

tree::TerminalNode* ProjectQParser::ProjectqprogContext::NEWLINE(size_t i) {
  return getToken(ProjectQParser::NEWLINE, i);
}


size_t ProjectQParser::ProjectqprogContext::getRuleIndex() const {
  return ProjectQParser::RuleProjectqprog;
}

void ProjectQParser::ProjectqprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProjectqprog(this);
}

void ProjectQParser::ProjectqprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProjectqprog(this);
}

ProjectQParser::ProjectqprogContext* ProjectQParser::projectqprog() {
  ProjectqprogContext *_localctx = _tracker.createInstance<ProjectqprogContext>(_ctx, getState());
  enterRule(_localctx, 8, ProjectQParser::RuleProjectqprog);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(87);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProjectQParser::ALLOCATE)
      | (1ULL << ProjectQParser::MEASURE)
      | (1ULL << ProjectQParser::IDENTIFIER))) != 0)) {
      setState(86);
      instr();
    }
    setState(97);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(90); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(89);
          match(ProjectQParser::NEWLINE);
          setState(92); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == ProjectQParser::NEWLINE);
        setState(94);
        instr(); 
      }
      setState(99);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ProjectQParser::NEWLINE) {
      setState(100);
      match(ProjectQParser::NEWLINE);
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstrContext ------------------------------------------------------------------

ProjectQParser::InstrContext::InstrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProjectQParser::GateContext* ProjectQParser::InstrContext::gate() {
  return getRuleContext<ProjectQParser::GateContext>(0);
}

ProjectQParser::AllocateContext* ProjectQParser::InstrContext::allocate() {
  return getRuleContext<ProjectQParser::AllocateContext>(0);
}

ProjectQParser::MeasureContext* ProjectQParser::InstrContext::measure() {
  return getRuleContext<ProjectQParser::MeasureContext>(0);
}


size_t ProjectQParser::InstrContext::getRuleIndex() const {
  return ProjectQParser::RuleInstr;
}

void ProjectQParser::InstrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstr(this);
}

void ProjectQParser::InstrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstr(this);
}

ProjectQParser::InstrContext* ProjectQParser::instr() {
  InstrContext *_localctx = _tracker.createInstance<InstrContext>(_ctx, getState());
  enterRule(_localctx, 10, ProjectQParser::RuleInstr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ProjectQParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(106);
        gate();
        break;
      }

      case ProjectQParser::ALLOCATE: {
        enterOuterAlt(_localctx, 2);
        setState(107);
        allocate();
        break;
      }

      case ProjectQParser::MEASURE: {
        enterOuterAlt(_localctx, 3);
        setState(108);
        measure();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateContext ------------------------------------------------------------------

ProjectQParser::GateContext::GateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProjectQParser::GatenameContext* ProjectQParser::GateContext::gatename() {
  return getRuleContext<ProjectQParser::GatenameContext>(0);
}

ProjectQParser::QbitarglistContext* ProjectQParser::GateContext::qbitarglist() {
  return getRuleContext<ProjectQParser::QbitarglistContext>(0);
}

ProjectQParser::ParamlistContext* ProjectQParser::GateContext::paramlist() {
  return getRuleContext<ProjectQParser::ParamlistContext>(0);
}


size_t ProjectQParser::GateContext::getRuleIndex() const {
  return ProjectQParser::RuleGate;
}

void ProjectQParser::GateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGate(this);
}

void ProjectQParser::GateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGate(this);
}

ProjectQParser::GateContext* ProjectQParser::gate() {
  GateContext *_localctx = _tracker.createInstance<GateContext>(_ctx, getState());
  enterRule(_localctx, 12, ProjectQParser::RuleGate);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    gatename();
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ProjectQParser::T__1) {
      setState(112);
      paramlist();
    }
    setState(115);
    match(ProjectQParser::T__7);
    setState(116);
    qbitarglist();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GatenameContext ------------------------------------------------------------------

ProjectQParser::GatenameContext::GatenameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProjectQParser::GatenameContext::IDENTIFIER() {
  return getToken(ProjectQParser::IDENTIFIER, 0);
}


size_t ProjectQParser::GatenameContext::getRuleIndex() const {
  return ProjectQParser::RuleGatename;
}

void ProjectQParser::GatenameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGatename(this);
}

void ProjectQParser::GatenameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGatename(this);
}

ProjectQParser::GatenameContext* ProjectQParser::gatename() {
  GatenameContext *_localctx = _tracker.createInstance<GatenameContext>(_ctx, getState());
  enterRule(_localctx, 14, ProjectQParser::RuleGatename);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(ProjectQParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AllocateContext ------------------------------------------------------------------

ProjectQParser::AllocateContext::AllocateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProjectQParser::AllocateContext::ALLOCATE() {
  return getToken(ProjectQParser::ALLOCATE, 0);
}

ProjectQParser::QbitContext* ProjectQParser::AllocateContext::qbit() {
  return getRuleContext<ProjectQParser::QbitContext>(0);
}


size_t ProjectQParser::AllocateContext::getRuleIndex() const {
  return ProjectQParser::RuleAllocate;
}

void ProjectQParser::AllocateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAllocate(this);
}

void ProjectQParser::AllocateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAllocate(this);
}

ProjectQParser::AllocateContext* ProjectQParser::allocate() {
  AllocateContext *_localctx = _tracker.createInstance<AllocateContext>(_ctx, getState());
  enterRule(_localctx, 16, ProjectQParser::RuleAllocate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(ProjectQParser::ALLOCATE);
    setState(121);
    match(ProjectQParser::T__7);
    setState(122);
    qbit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MeasureContext ------------------------------------------------------------------

ProjectQParser::MeasureContext::MeasureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProjectQParser::MeasureContext::MEASURE() {
  return getToken(ProjectQParser::MEASURE, 0);
}

ProjectQParser::QbitContext* ProjectQParser::MeasureContext::qbit() {
  return getRuleContext<ProjectQParser::QbitContext>(0);
}


size_t ProjectQParser::MeasureContext::getRuleIndex() const {
  return ProjectQParser::RuleMeasure;
}

void ProjectQParser::MeasureContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMeasure(this);
}

void ProjectQParser::MeasureContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMeasure(this);
}

ProjectQParser::MeasureContext* ProjectQParser::measure() {
  MeasureContext *_localctx = _tracker.createInstance<MeasureContext>(_ctx, getState());
  enterRule(_localctx, 18, ProjectQParser::RuleMeasure);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    match(ProjectQParser::MEASURE);
    setState(125);
    match(ProjectQParser::T__7);
    setState(126);
    qbit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamlistContext ------------------------------------------------------------------

ProjectQParser::ParamlistContext::ParamlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProjectQParser::ParamContext *> ProjectQParser::ParamlistContext::param() {
  return getRuleContexts<ProjectQParser::ParamContext>();
}

ProjectQParser::ParamContext* ProjectQParser::ParamlistContext::param(size_t i) {
  return getRuleContext<ProjectQParser::ParamContext>(i);
}


size_t ProjectQParser::ParamlistContext::getRuleIndex() const {
  return ProjectQParser::RuleParamlist;
}

void ProjectQParser::ParamlistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamlist(this);
}

void ProjectQParser::ParamlistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamlist(this);
}

ProjectQParser::ParamlistContext* ProjectQParser::paramlist() {
  ParamlistContext *_localctx = _tracker.createInstance<ParamlistContext>(_ctx, getState());
  enterRule(_localctx, 20, ProjectQParser::RuleParamlist);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(ProjectQParser::T__1);
    setState(129);
    param();
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ProjectQParser::T__3) {
      setState(130);
      match(ProjectQParser::T__3);
      setState(131);
      param();
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(137);
    match(ProjectQParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

ProjectQParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProjectQParser::ExprContext* ProjectQParser::ParamContext::expr() {
  return getRuleContext<ProjectQParser::ExprContext>(0);
}


size_t ProjectQParser::ParamContext::getRuleIndex() const {
  return ProjectQParser::RuleParam;
}

void ProjectQParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void ProjectQParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

ProjectQParser::ParamContext* ProjectQParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 22, ProjectQParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(139);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QbitarglistContext ------------------------------------------------------------------

ProjectQParser::QbitarglistContext::QbitarglistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProjectQParser::QbitContext *> ProjectQParser::QbitarglistContext::qbit() {
  return getRuleContexts<ProjectQParser::QbitContext>();
}

ProjectQParser::QbitContext* ProjectQParser::QbitarglistContext::qbit(size_t i) {
  return getRuleContext<ProjectQParser::QbitContext>(i);
}


size_t ProjectQParser::QbitarglistContext::getRuleIndex() const {
  return ProjectQParser::RuleQbitarglist;
}

void ProjectQParser::QbitarglistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQbitarglist(this);
}

void ProjectQParser::QbitarglistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ProjectQListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQbitarglist(this);
}

ProjectQParser::QbitarglistContext* ProjectQParser::qbitarglist() {
  QbitarglistContext *_localctx = _tracker.createInstance<QbitarglistContext>(_ctx, getState());
  enterRule(_localctx, 24, ProjectQParser::RuleQbitarglist);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(153);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ProjectQParser::QREG: {
        enterOuterAlt(_localctx, 1);
        setState(141);
        qbit();
        break;
      }
